# gnu_gnucap

./: "Help" Manual  .gitignore  CMakeLists.txt  GNUmakefile.am  INSTALL  Make2.in  Make3  Makefile  Makefile.template  Makefile~  README  alias.h  autogen.sh  bootstrap  c_alias.cc  c_alias_unalias.cc  c_alias_unalias.cc~  c_alter.cc  c_aspice.cc  c_aspice.cc~  c_cls.cc  c_colon_comand.cc  c_def_undef.cc  c_def_undef.cc~  c_dowhile.cc  c_echo.cc  c_echo.cc~  c_foreach.cc  c_help.cc  c_helpv2.cc  c_history.cc  c_history.cc~  c_if.cc  c_mdump.cc  c_mdump.cc~  c_mul_commands.cc  c_mul_commands.cc~  c_plot.cc  c_quit.cc  c_quit.cc~  (+37 more)
apps/: CMakeLists.txt  Make.depend  Make1  Make2.mingw32_static  Makefile.am  bm_complex.cc  bm_exp.cc  bm_fit.cc  bm_model.cc  bm_poly.cc  bm_pulse.cc  bm_sffm.cc  bm_sin.cc  c_clear.cc  c_comand.cc  c_help.cc  c_list.cc  c_measure.cc  c_prbcmd.cc  c_sweep.cc  c_system.cc  c_wave.cc  d_poly_g.cc  d_trln.cc  d_vs.cc  lang_spice.cc  lang_verilog.cc  s__out.cc  s__solve.cc  s_ac.cc  s_dc.cc  s_fo.cc  s_tr.cc  s_tr_set.cc  u_out.cc
autotools/: GNUmakefile.am  Makefile.am  README  bootstrap  configure.ac  gnucap.in  include.am  lib.am  main.am
cmake/: FindDL.cmake  config.h.in
examples/: Makefile.am
include/: CMakeLists.txt  Make.depend  Make1  Makefile  Makefile.am  ap.h  bm.h  configure  declare.h  e_base.h  e_card.h  e_cardlist.h  e_compon.h  e_elemnt.h  e_node.h  e_paramlist.h  globals.h  io_.h  l_dispatcher.h  l_istring.h  l_lib.h  l_stlextra.h  m_base.h  m_complex.h  m_expression.h  m_mvpoly.h  m_phase.h  m_wave.h  md.h  mode.h  mode_base.h  patchlev.h  patchlev.h.in  s__.h  spice-wrapper.cc  u_lang.h  u_nodemap.h  u_opt.h  u_opt_base.h  u_out.h  (+5 more)
lib/: CMakeLists.txt  Make.depend  Make1  Make2.g++  Make2.mingw32_static  Makefile  Makefile.am  ap_construct.cc  ap_match.cc  bm.cc  bm_cond.cc  bm_value.cc  c__cmd.cc  c_attach.cc  c_file.cc  configure  d_logicmod.cc  e_base.cc  e_card.cc  e_cardlist.cc  e_compon.cc  e_elemnt.cc  e_model.cc  e_node.cc  e_paramlist.cc  e_storag.cc  globals.cc  io_contr.cc  l_pmatch.cc  l_wmatch.cc  m_expression_dump.cc  m_expression_in.cc  m_expression_reduce.cc  m_fft.cc  test_readline.cc  u_lang.cc  u_nodemap.cc  u_opt2.cc  u_parameter.cc  u_prblst.cc  (+3 more)
main/: CMakeLists.txt  Make.depend  Make1  Make2.Debug  Make2.g++  Make2.mingw32_static  Makefile  Makefile.am  configure  gnucap-conf.in  gnucap.in  gnucap.mk.in  main.cc
modelgen/: CMakeLists.txt  Makefile  Makefile.am  configure  mg_.h  mg_out_common.cc  mg_out_h.cc  mg_out_root.cc
plugins/: s_dc2.cc
tests/: Makefile.am  alias.out~  alias~  c_alias_unalias.1  c_alias_unalias.2  c_alias_unalias.3  c_alias_unalias.4  c_alias_unalias_1.out  c_alias_unalias_2.out  c_alias_unalias_3.out  c_alias_unalias_4.out  c_aspice.1  c_aspice.2  c_aspice_1.out  c_cls.1  c_cls.2  c_colon_command.1  c_colon_command_1.out  c_def_undef.1  c_def_undef_1.out  c_echo.1  c_echo_1.out  c_history.1  c_history_1.out  c_if.1  c_if.2  c_if_1.out  c_if_2.out  c_mdump.1  c_mdump.2  c_mdump.3  c_mdump_2.out  c_mdump_3.out  c_quit.1  c_quit.2  c_quit_1.out  c_quit_2.out  c_rmcirc.1  c_setv.1  c_setv.2  (+51 more)
tests/==out/: bm_complex.1.ckt.out  bm_complex.2.ckt.out  bm_complex.3.ckt.out  bm_fit.2.1.ckt.out  bm_fit.2.2.ckt.out  bm_fit.2.3.ckt.out  bm_poly.1.ckt.out  bm_poly.2.ckt.out  bm_pulse.1.ckt.out  bm_pulse.2.ckt.out  bm_pulse.3.ckt.out  bm_sffm.1.ckt.out  bm_sffm.2.ckt.out  bm_sffm.3.ckt.out  bm_sffm.5.ckt.out  bm_sffm.6.ckt.out  bm_table.2.1.ckt.out  bm_table.2.2.ckt.out  bm_table.2.3.ckt.out  bm_table.2.4.ckt.out  c.ckt.out  c_measure.1.ckt.out  cont.1.ckt.out  cont.2.ckt.out  d_cap.ic4.ckt.out  d_coil.1c.ckt.out  d_coil.1d.ckt.out  d_diode.1.ckt.out  d_logic_tr_ab1.ckt.out  d_logic_tr_ab2.ckt.out  d_logic_tr_an1.ckt.out  d_logic_tr_an2.ckt.out  d_logic_tr_db2.ckt.out  d_logic_tr_dn1.ckt.out  d_logic_tr_mb1a.ckt.out  d_logic_tr_mb2a.ckt.out  d_logic_tr_mb2b.ckt.out  d_logic_tr_mn2a.ckt.out  d_logic_tr_mn2b.ckt.out  d_mos1.nand2.ckt.out  (+47 more)
tests/dowhile/: 1.out  2.out  3.out  4.out  5.out  README.txt  c_dowhile.1  c_dowhile.2  c_dowhile.3  c_dowhile.4  c_dowhile.5
tests/foreach/: 1.out  2.out  3.out  4.out  5.out  6.out  8.out  README.txt  c_foreach.1  c_foreach.2  c_foreach.3  c_foreach.4  c_foreach.5  c_foreach.6  c_foreach.7  c_foreach.8
tests/if/: 10.out  11.out  12.out  13.out  3.out  5.out  6.out  7.out  8.out  9.out  c_if.1  c_if.10  c_if.11  c_if.12  c_if.13  c_if.14  c_if.2  c_if.3  c_if.4  c_if.5  c_if.6  c_if.7  c_if.8  c_if.9
tests/repeat/: 1.out  2.out  3.out  4.out  5.out  README.txt  c_repeat.1  c_repeat.2  c_repeat.3  c_repeat.4  c_repeat.5
tests/while/: 1.out  2.out  3.out  4.out  5.out  7.out  README.txt  c_while.1  c_while.2  c_while.3  c_while.4  c_while.5  c_while.6  c_while.7
