## -*- Makefile -*-
##
## $Id: Makefile.am,v 26.136 2009/12/08 02:03:49 al Exp $
##
##                            COPYRIGHT
##
## This file is part of "Gnucap", the Gnu Circuit Analysis Package
##
##  Copyright (C) 2005, 2006 Dan McMahill
##
##  This program is free software; you can redistribute it and/or modify
##  it under the terms of the GNU General Public License as published by
##  the Free Software Foundation; either version 3 of the License, or
##  (at your option) any later version.
##
##  This program is distributed in the hope that it will be useful,
##  but WITHOUT ANY WARRANTY; without even the implied warranty of
##  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##  GNU General Public License for more details.
##
##  You should have received a copy of the GNU General Public License
##  along with this program; if not, write to the Free Software
##  Foundation, Inc.,  51 Franklin Street, Fifth Floor, Boston, MA
##  02110-1301, USA.

plugindir=$(pkglibdir)
plugin_LTLIBRARIES = gnucap-default-plugins.la
AM_LDFLAGS = -shared -module -avoid-version
#------------------------------------------------------------------------
# These source files can be omitted, and supplied as plugins.
# device models defined in high level .model files
MODELS = \
d_mos1.model d_mos2.model d_mos3.model \
d_mos4.model d_mos5.model d_mos6.model d_mos7.model d_mos8.model \
d_mos123.model d_mos_base.model d_mos.model \
d_bjt.model d_diode.model

# device models hand coded in C++
D_SRCS = \
d_admit.cc d_cap.cc d_cccs.cc d_ccvs.cc d_coil.cc \
d_cs.cc d_poly_g.cc d_poly_cap.cc d_res.cc d_switch.cc \
d_trln.cc d_vcg.cc d_vcr.cc d_vcvs.cc d_vs.cc \
d_meter.cc

# behavioral modeling functions
BM_SRCS = \
bm_complex.cc bm_exp.cc bm_fit.cc bm_generator.cc \
bm_model.cc bm_poly.cc bm_posy.cc bm_pulse.cc bm_pwl.cc bm_sffm.cc \
bm_sin.cc bm_tanh.cc bmm_table.cc bmm_semi.cc

# utility commands, usually one file per command
# some have multiple commands in a file
C_SRCS = \
c_clear.cc c_comand.cc c_delete.cc c_exp.cc  c_genrat.cc \
c_list.cc c_measure.cc c_modify.cc c_param.cc c_prbcmd.cc \
c_status.cc c_sweep.cc c_sim.cc c_system.cc

# simulation commands, usually multiple files for one command
S_SRCS = \
s__init.cc s__out.cc s__solve.cc \
s_ac.cc s_dc.cc s_fo.cc \
s_tr.cc s_tr_set.cc s_tr_swp.cc

# netlist languages
LANG_SRCS = \
lang_spice.cc lang_spectre.cc lang_verilog.cc

# parameter functions
FUNC_SRCS = \
func_core.cc measure_eval.cc \
measure_max.cc measure_min.cc measure_slewrate.cc measure_cross.cc \
measure_integral.cc measure_average.cc measure_rms.cc measure_at.cc

# other stuff
OTHER_SRCS = \
signon.cc
#------------------------------------------------------------------------
RAW_SRCS = \
$(D_SRCS) \
$(BM_SRCS) \
$(C_SRCS) \
$(S_SRCS) \
$(LANG_SRCS) \
$(FUNC_SRCS) \
$(OTHER_SRCS) \
$(MODELS)
#------------------------------------------------------------------------
RAW = $(RAW_HDRS) $(RAW_SRCS) $(RAW_OTHER) $(MODELS)
#------------------------------------------------------------------------
gnucap_default_plugins_la_SOURCES = $(RAW_SRCS)
gnucap_default_plugins_la_CPPFLAGS = $(AM_CPPFLAGS) \
    -I$(top_srcdir)/include -I$(top_builddir)/include
#------------------------------------------------------------------------
#------------------------------------------------------------------------
#------------------------------------------------------------------------
#------------------------------------------------------------------------
# DISTFILES = $(RAW) $(GENERATED_DIST) $(IMPORTED_DIST)
#------------------------------------------------------------------------
#------------------------------------------------------------------------
SRCS = $(IMPORTED_SRCS) $(GENERATED_SRCS) $(RAW_SRCS)
HDRS = $(RAW_HDRS) $(GENERATED_HDRS) $(IMPORTED_HDRS)
OBJS = ${SRCS:.cc=.o}
TARGET_DEPENDS = $(OBJS) $(RAW) $(MODELS)
#------------------------------------------------------------------------
#------------------------------------------------------------------------
LIBPATH = $(top_builddir)/lib/.libs
MODELGEN = $(top_builddir)/modelgen/gnucap-modelgen
#------------------------------------------------------------------------
.model.cc:

%.cc %.h: %.model
	$(AM_V_GEN)$(MODELGEN) $<
	@touch $*.cc

# some autogenerated headers that are used by others
BUILT_SOURCES = d_mos_base.h d_mos.h d_mos123.h d_diode.h

CLEANFILES = $(MODELS:%.model=%.h) \
             $(MODELS:%.model=%.cc)
#------------------------------------------------------------------------
#-----------------------------------------------------------------------------
