install(FILES
    ap.h
    bm.h
    c_comand.h
    constant.h
    d_coment.h
    d_dot.h
    d_logic.h
    d_subckt.h
    declare.h
    e_aux.h
    e_base.h
    e_card.h
    e_cardlist.h
    e_ccsrc.h
    e_compon.h
    e_elemnt.h
    e_model.h
    e_node.h
    e_storag.h
    e_subckt.h
    globals.h
    io_.h
    io_error.h
    io_trace.h
    l_compar.h
    l_denoise.h
    l_dispatcher.h
    l_lib.h
    l_stlextra.h
    l_timer.h
    m_base.h
    m_cpoly.h
    m_divdiff.h
    m_expression.h
    m_interp.h
    m_matrix.h
    m_phase.h
    m_spline.h
    m_wave.h
    md.h
    mode.h
    patchlev.h
    s__.h
    s_tr.h
    trace_off.h
    trace_on.h
    u_cardst.h
    u_function.h
    u_lang.h
    u_limit.h
    u_nodemap.h
    u_opt.h
    u_parameter.h
    u_prblst.h
    u_probe.h
    u_sdp.h
    u_sim_data.h
    u_status.h
    u_time_pair.h
    u_xprobe.h
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/gnucap
)
